# strobe

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
strobe/: __init__.py
strobe/analysis/: __init__.py  conformance.py  discovery.py  performance.py
strobe/instrumentation/: __init__.py  event_log.py  plugin.py
strobe/instrumentation/backends/: __init__.py  base.py  memory.py  postgresql.py
strobe/visualization/: __init__.py  app.py  plots.py
tests/analysis/: test_conformance.py  test_discovery.py  test_performance.py
tests/instrumentation/: test_event_log.py  test_plugin.py
tests/instrumentation/backends/: test_memory_backend.py  test_postgresql_backend.py
tests/visualization/: test_plots.py
