[project]
name = "strobe"
version = "0.0.1"
description = "Process Mining & Agent Instrumentation for AI Agent Frameworks"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=1.0.0",
    "pm4py>=2.7.0",
    "pandas>=2.0.0",
    "streamlit>=1.32.0",
    "plotly>=5.18.0",
]

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
asyncio_mode = "auto"
