[project]
name = "strobe"
dynamic = ["version"]
description = "Process Mining & Agent Instrumentation for AI Agent Frameworks"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=1.0.0",
    "pm4py>=2.7.0",
    "pandas>=2.0.0",
    "streamlit>=1.32.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.30"]

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "testcontainers[postgresql]>=4.0.0",
    "asyncpg>=0.30",
]
dev = [
    "ruff==0.15.4",
    "mypy==1.19.1",
    "pre-commit==4.5.1",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "strobe/_version.py"


[tool.pytest.ini_options]
asyncio_mode = "auto"


[tool.ruff]
extend-exclude = ["strobe/_version.py"]
